# modilies

./: .gitignore  README.md  lie_fetcher.py  lies_to_text.py  lies_to_twitter_thread.py  pyproject.toml  the_lies.py
tests/: test_modi_lies.py
