[tool.poetry]
name = "modi-lies"
version = "0.1.0"
description = ""
authors = ["Sherub Thakur <sherub.thakur@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
python-dateutil = "^2.8.1"
beautifulsoup4 = "^4.9.3"
requests = "^2.24.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
